--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,13 @@
             "email": "1037483576@qq.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=5.3.0",
+        "psr/log": "~1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Meepo\\": "src/Meepo"
+        }
+    }
 }
